# vulkan_pathtracer

./: CMakeLists.txt  main.cpp  submission-final.md
assets/CornellBox/: CornellBox-Glossy-Floor.mtl  CornellBox-Glossy.mtl  CornellBox-Sphere.mtl
shaders/: closesthit.rchit  closesthit.rchit.spv  common.glsl  compile.bat  denoise.comp  denoise.comp.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  raygn.rgen.spv
src/: acceleration_structure.cpp  acceleration_structure.h  buffer.cpp  buffer.h  context.cpp  context.h  image.cpp  image.h  mesh_loader.h  wavelet_denoise.h
